--- a/common/static/css/search.css
+++ b/common/static/css/search.css
@@ -1,28 +1,6 @@
-.searchwrapper {
-	width:45%;
-	padding: 0;
-	margin: 0;
-	position:relative;
-}
-
-.result-title{
-	text-align: center;
-	word-wrap: normal;
-	padding-top: 175px;
-}
-.searchwrapper form { display: inline; }
-
-.search-results{
-	margin-left: 10%;
-	margin-top: -150px;
-}
-
-.result-content{
-	margin-top: -20px;
-}
-
-.searchbox {
-	border:0;
+#searchwrapper {
+	width: 250px;
+	height: 30px;
 	background: -moz-linear-gradient(top,  #ffffff 0%, #ededed 49%, #fafafa 50%, #ededed 50%, #dcdcdc 100%); /* FF3.6+ */
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(49%,#ededed), color-stop(50%,#fafafa), color-stop(50%,#ededed), color-stop(100%,#dcdcdc)); /* Chrome,Safari4+ */
 	background: -webkit-linear-gradient(top,  #ffffff 0%,#ededed 49%,#fafafa 50%,#ededed 50%,#dcdcdc 100%); /* Chrome10+,Safari5.1+ */
@@ -30,6 +8,17 @@
 	background: -ms-linear-gradient(top,  #ffffff 0%,#ededed 49%,#fafafa 50%,#ededed 50%,#dcdcdc 100%); /* IE10+ */
 	background: linear-gradient(to bottom,  #ffffff 0%,#ededed 49%,#fafafa 50%,#ededed 50%,#dcdcdc 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#dcdcdc',GradientType=0 ); /* IE6-9 */
+
+	padding: 0;
+	margin: 0;
+	position:relative;
+}
+
+#searchwrapper form { display: inline; }
+
+.searchbox {
+	border:0;
+	background-color:transparent;
 	position:absolute;
 	top:3px;
 	left:0;
@@ -40,61 +29,16 @@
 .searchbox_submit {
 	border: 0;
 	background-color: transparent;
-	background-size: cover;
 	position: absolute;
-	top: 2.5px;
-	left: 210px;
-	/*width: 35px;*/
-}
-
-.searchbox_submit:before{
-	position: absolute;
-    content: '';
-    background-image: url("../images/search-icon.svg");
-    background-size: cover;
-    background-color: transparent;
-    margin-left: 6px;
-    margin-top: 4px;
-    width:30px;
-    height:30px;
-    pointer-events: none;
-}
-.searchbox_submit:hover {
-	cursor:pointer;
-	cursor: hand;
-}
-
-.content-select{
-	display: block;
-	text-align: right;
-	padding-top: 10px;
+	top: 4px;
+	left: 225px;
+	width:25px;
+	height:25px;
 }
 
 .results_snippet{
 	color: #666666;
 	font-family: "Open Sans", "Arial";
+	font-size: 14px;
 	font-weight: 300;
-	height: 155px;
-	width: 360px;
-	text-align: justify;
-}
-
-.result_wrapper{
-	width: 705px;
-}
-
-.snippet_container{
-	overflow: hidden;
-	height: 155px;
-	width: 360px;
-	margin-left: 15px;
-}
-
-.thumbnail{
-	width: 190px;
-	height: 155px;
-}
-
-.columnate{
-	float:left;
 }
