--- a/common/templates/search_templates/results.html
+++ b/common/templates/search_templates/results.html
@@ -1,65 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	${css_link("../static/css/search.css")}
-	${js_link("../static/js/div_sizing.js")}
+
+	<meta charset="utf-8" />
+	<title>Results</title>
+
+	<link rel="stylesheet" href="../static/css/results.css" type="text/css" />
+
 </head>
 
-% if spelling_correction:
-<div class="correction_div">
-	<p class="search_correction">
-		<span>Did you mean </span>
-		<a href="${ search_correction_link }">${spelling_correction }</a>
-		<span>?</span>
-	</p>
-</div>
-% endif
-
-<section class="search-results">
-	% for datum in data:
-	<section class="result">
-		<div class="result_wrapper">
-			<h1 class="result-title">${datum[0]}</h1>
-			<div class="result-content">
-				<div class="columnate">
-					% if len(datum) >= 3:
-						<img class="thumbnail" src="${datum[2]}" alt="${datum[0]}">
-					%endif
-				</div>
-				<div class="columnate">
-					<div class="snippet_container">
-						<p  class="results_snippet scaled-text">
-							${datum[1]}
-						</p>
-					</div>
-				</div>
+<body>
+	{% if search_correction %}
+	<div class="correction_div">
+		<p class="search_correction">
+			Did you Mean: {{ search_correction }} ?
+		</p>
+	</div>
+	{% endif %}
+	<ol>
+		{% for datum in data %}
+		<li>
+			<div>
+				<h1>{{ datum.0 }}</h1>
+				<!-- </h2>Score:</h2> -->
+				<p class="results_snippet"> 
+					{{ datum.1|safe }}
+				</p>
 			</div>
-		</div>
-	</section>
-	% endfor
-</section>
-
-% if len(data) > 1:
-	<section class="pagination">
-		<span class="step-links">
-			% if data.number > 1:
-				<a href="${ prev_page }">Prev</a>
-			% endif
-
-			<span class="current">
-				Page ${ data.number } of ${ data.paginator.num_pages }
-			</span> 
-
-			% if data.number < data.paginator.num_pages:
-				<a href="${next_page}">Next</a>
-			%endif
-		</span>
-	</section>
-% endif
-
-
-<%def name="css_link(path, media='')">
-	<link rel="stylesheet" type="text/css" href="${path|h}" media="${media}"></link>
-</%def>
-
-<%def name="js_link(path)">
-	<script type="text/javascript" src="${path|h}"></script>
-</%def>
+		</li>
+		{% endfor %}
+	</ol>
+</body>
